2002-04-26  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: added GModule to list of dependencies.

	* libgda/Makefile.am: define LIBGDA_PLUGINDIR.

	* libgda/gda-init.c (gda_init): check that GModule is supported.

	* libgda/gda-config.h: removed CORBA-related fields in the
	GdaProviderInfo structure.

	* libgda/gda-config.c (gda_config_get_provider_list): implemented
	for the new non-CORBA architecture.
	(gda_config_free_provider_info): don't free non-existant-anymore
	fields.

	* libgda/gda-client.c (gda_client_open_connection): actually load
	the different plugins containing the providers.

	* testing/config.c: don't use non-existant-anymore fields. Also,
	just list sections and keys for libgda, not all the GConf database.

	* providers/*/*.server.in: removed unneeded files and implemented
	plugin_* functions, that will be used to interact with the plugin.

2002-04-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* libgda/gda-config.h: removed obsolte GdaComponentInfo structure.

	* testing/config.c: fixes.

2002-04-22  Rodrigo Moya <rodrigo@gnome-db.org>

	* providers/default/*:
	* providers/mysql/*:
	* providers/postgres/*:
	* providers/sqlite/*:
	* providers/odbc/*: ported to the new non-CORBA architecture.

	* doc/C/*:
	* testing/*: compilation fixes.

	* libgda/gda-row.[ch] (gda_row_attributes_get_length): new function.

	* libgda/gda-connection.[ch] (gda_connection_add_error_string):
	new function.

2002-04-21  Rodrigo Moya <rodrigo@gnome-db.org>

	* configure.in: bumped version to 0.8.190, and incremented library
	version to 1.1.0. Removed CORBA dependencies. We still have a dependency
	on GConf, which uses ORBit2, though.

	* Makefile.am: removed report/* from build, until it is ready.

	* libgda/Makefile.am: remove CORBA-generated files.

	* libgda/*: compilation fixes, not really working yet.

	* libgda/gda-server*: removed these files, as they can be merged
	with the non-Server equivalents.
	
2002-04-11  Akira TAGOH  <tagoh@gnome-db.org>
